log
Wed 24 Apr 2024 09:43:32 PM UTC: 
 tests:  0|6
total_score: 0/70
dcf9f75
Fri 26 Apr 2024 05:03:54 AM UTC: 
 hashmap.c | 33 +++++++++++++++++++++++++++++----
 1 file changed, 29 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:20: error: ‘Pair’ has no member named ‘next’
   63 |         par2 = par2->next;
      |                    ^~
hashmap.c:65:11: error: ‘Pair’ has no member named ‘next’
   65 |       par2->next = par;
      |           ^~
Compilation failed
80ceddc
Fri 26 Apr 2024 05:21:47 AM UTC: 
 hashmap.c | 24 +++++-------------------
 1 file changed, 5 insertions(+), 19 deletions(-)
 tests:  4|5
total_score: 20/70
8ff31ec
Fri 26 Apr 2024 05:33:00 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
32d4e5b
Fri 26 Apr 2024 05:46:45 AM UTC: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test1':
test.c:(.text+0xc42): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test2':
test.c:(.text+0xd03): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test3':
test.c:(.text+0xd87): undefined reference to `searchMap'
collect2: error: ld returned 1 exit status
Compilation failed
9709205
